tests/parser/valid/canonical-type-and-var.inox
Module ParserCanonical

Type
    TPoint Struct
        FX Integer
        FY Integer
    ;

Main() :
    Var
        P TPoint
        X Integer := 10
    ;

    P.FX := X
    P.FY := 20
;
