tests/parser/invalid/type-colon.inox
Module BadTypeColon

Type :
    TPoint Struct
        FX Integer
    ;
